--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,5 +3,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^(.*)$ $1.php
-#RewriteRule ^([a-z]+)/?$ $1.php [NC]
+RewriteRule ^([a-z]+)/?$ $1.php [NC]
 </IfModule>
