--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
-RewriteEngine on
+Options +MultiViews
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*)$ $1.php
-RewriteRule ^([a-z]+)/?$ $1.php [NC]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.php [NC,L]
 </IfModule>
