--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 Options -Indexes
 RewriteEngine On
-ErrorDocument 403 /www.mmonitors.com/public/errores/403.php
-ErrorDocument 404 /www.mmonitors.com/public/errores/404.php
-ErrorDocument 500 /www.mmonitors.com/public/errores/500.php
+ErrorDocument 403 /mmonitors.com/public/errores/403.php
+ErrorDocument 404 /mmonitors.com/public/errores/404.php
+ErrorDocument 500 /mmonitors.com/public/errores/500.php
